Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
10.5(EOL), 10.6(EOL), 10.11, 11.2(EOL), 11.4, 11.6(EOL), 11.7(EOL), 11.8, 12.0(EOL), 12.1(EOL)
-
Can result in unexpected behaviour
-
Fix InnoDB index corruption when renaming key names with case-only differences.
-
Q2/2026 Server Maintenance
Description
test case
--source include/have_innodb.inc
|
 |
CREATE TABLE t1 (a INT,b INT,KEY(a),KEY(b)) ENGINE=INNODB; |
ALTER TABLE t1 RENAME KEY b TO B; |
DELETE FROM t1; |
Leads to
CREATE TABLE t1 (a INT,b INT,KEY(a),KEY(b)) ENGINE=INNODB;
|
ALTER TABLE t1 RENAME KEY b TO B;
|
DELETE FROM t1;
|
Warnings:
|
Warning 1082 InnoDB: Table test/t1 contains 2 indexes inside InnoDB, which is different from the number of indexes 2 defined in the MariaDB
|
main.mytest [ fail ] Found warnings/errors in server log file!
|
Test ended at 2024-09-18 07:30:39
|
line
|
2024-09-18 7:30:39 4 [ERROR] Cannot find index B in InnoDB index dictionary.
|
2024-09-18 7:30:39 4 [ERROR] InnoDB indexes are inconsistent with what defined in .frm for table ./test/t1
|
2024-09-18 7:30:39 4 [ERROR] InnoDB could not find key no 1 with name B from dict cache for table test/t1
|
2024-09-18 7:30:39 4 [ERROR] InnoDB: Table test/t1 contains 2 indexes inside InnoDB, which is different from the number of indexes 2 defined in the MariaDB Have you mixed up .frm files from different installations? See https://mariadb.com/kb/en/innodb-troubleshooting/
|
Attachments
Issue Links
- is duplicated by
-
MDEV-37848 RENAME INDEX corrupts index
-
- Closed
-